Margin applied to main section to prevent UI overlap

--- a/index.css
+++ b/index.css
@@ -117,6 +117,7 @@ ul li a:hover {
 }
 
 .content {
+    margin-top: 2.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
